objects/ASI_CRM_Business_Analyst__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Divisions</label>
        <referenceTo>ASI_CRM_Division__c</referenceTo>
        <relationshipLabel>Business Analysts</relationshipLabel>
        <relationshipName>Business_Analysts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Analysts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Analyst</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Analysts</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Business_Analyst</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_Business_Analyst</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>